# goji

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  aliases.js  build.rs  deny.toml  index.html  search-index.js
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
examples/: search.rs  sprint.rs  transitions.rs
goji/: Credentials.t.html  EmptyResponse.t.html  HistoryItem.t.html  IssueLink.t.html  Jira.t.html  SearchOptionsBuilder.t.html  TransitionTo.t.html  TransitionTriggerOptions.t.html  TransitionTriggerOptionsBuilder.t.html  Visibility.t.html  all.html  enum.Credentials.html  enum.Error.html  index.html  sidebar-items.js  struct.Attachment.html  struct.Changelog.html  struct.Comment.html  struct.Comments.html  struct.EmptyResponse.html  struct.Errors.html  struct.History.html  struct.HistoryItem.html  struct.Issue.html  struct.IssueLink.html  struct.Jira.html  struct.LinkType.html  struct.Resolution.html  struct.Search.html  struct.SearchOptions.html  struct.SearchOptionsBuilder.html  struct.SearchResults.html  struct.Status.html  struct.Transition.html  struct.TransitionOption.html  struct.TransitionOptions.html  struct.TransitionTo.html  struct.TransitionTriggerOptions.html  struct.TransitionTriggerOptionsBuilder.html  struct.Transitions.html  (+4 more)
goji/boards/: BoardResults.t.html  Boards.t.html  BoardsIter.t.html  index.html  sidebar-items.js  struct.Board.html  struct.BoardResults.html  struct.Boards.html  struct.BoardsIter.html
goji/builder/: SearchOptions.t.html  struct.SearchOptions.html  struct.SearchOptionsBuilder.html
goji/errors/: enum.Error.html
goji/issues/: Assignee.t.html  CreateIssue.t.html  IssueResults.t.html  IssueType.t.html  Issues.t.html  IssuesIter.t.html  Priority.t.html  index.html  sidebar-items.js  struct.Assignee.html  struct.Component.html  struct.CreateIssue.html  struct.CreateResponse.html  struct.Fields.html  struct.IssueResults.html  struct.IssueType.html  struct.Issues.html  struct.IssuesIter.html  struct.Priority.html  struct.Project.html
goji/rep/: Changelog.t.html  Issue.t.html  (+26 more)
src/: attachments.rs  backlog.rs  boards.rs  builder.rs  components.rs  errors.rs  issues.rs  lib.rs  main.rs  rep.rs  rep.rs.in  resolution.rs  search.rs  sprints.rs  transitions.rs  versions.rs  worklogs.rs
tests/: boards_test.rs  builder_test.rs  issues_test.rs  jira_test.rs  rep_test.rs  sprints_test.rs  worklog_tests.rs
(+39 files in other folders)
