[package]
name = "goji"
version = "0.2.4"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust interface for Jira"
documentation = "http://softprops.github.io/goji"
homepage = "https://github.com/softprops/goji"
repository = "https://github.com/softprops/goji"
keywords = ["hyper", "jira"]
license = "MIT"
readme = "README.md"
edition = "2021"

[badges]
travis-ci = { repository = "softprops/goji" }
maintenance = { status = "actively-developed" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

[dependencies]
tracing = "0.1.34"
reqwest = { version = "0.11.10", default_features = false, features = ['blocking', 'rustls-tls'] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
url = "2.2.2"
time = { version="0.3.9", features =['serde-well-known', 'macros']}