[package]
name = "gouqi"
version = "0.3.1"
authors = ["softprops <d.tangren@gmail.com>", "avrabe <ralf_beier@me.com>"]
description = "Rust interface for Jira"
documentation = "https://docs.rs/gouqi"
homepage = "https://github.com/wunderfrucht/gouqi"
repository = "https://github.com/wunderfrucht/gouqi"
keywords = ["hyper", "jira"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dev-dependencies]
tracing-subscriber = "0.3.11"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

[dependencies]
tracing = "0.1.35"
reqwest = { version = "0.11.11", default_features = false, features = ["blocking", "rustls-tls"] }
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.82"
url = "2.2.2"
time = { version="0.3.11", features =['serde-well-known', 'macros']}